[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mp3-trim"
version = "0.1.0"
description = ""
authors = ["Xiaoyu Guo <biggates2010@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25.1"
click = "^8.1.7"
rich-click = "^1.8.3"

[[tool.poetry.source]]
name = "aliyun-mirror"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[tool.ruff.lint]
ignore = ["F821", "E501"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
